--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 <body id="page">
 <header>
 	<div id="logo">
-		<img src="./img/jilogo.png" width="200" height="70">
+		<img src="./img/jilogo.PNG" width="200" height="70">
 	</div>
 	<div id="top">
-		로그인 | 회원가입 | <a href="./img/rhkwp.png" target="_blank">마이페이지</a> | 고객센터
+		로그인 | 회원가입 | <a href="./img/rhkwp.PNG" target="_blank">마이페이지</a> | 고객센터
 	</div>
 </header>
 <div class="clear"></div>
