--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </nav>
 <div class="clear"></div>
 <section>
-		<a href="formss.html" target="_blank"><img src="./img/jimain.png" width="1080"></a>
+		<a href="formss.html" target="_blank"><img src="./img/jimain.PNG" width="1080"></a>
 </section>
 <aside>
 		<ul>
@@ -157,10 +157,10 @@
 </aside>
 <section>
 	<ul id="sub1">
-		<li><img src="./img/jimi.png" width="250"><br> 미세먼지 건강수치 </li>
-		<li><img src="./img/jibub.png" width="250"> <br> 법정감염병분류체계개편 </li>
-		<li><img src="./img/jipe.png" width="250"> <br> 액상형전자담배 관련 </li>
-		<li><img src="./img/jico.png" width="250"> <br> 코로나19 영상자료 </li>
+		<li><img src="./img/jimi.PNG" width="250"><br> 미세먼지 건강수치 </li>
+		<li><img src="./img/jibub.PNG" width="250"> <br> 법정감염병분류체계개편 </li>
+		<li><img src="./img/jipe.PNG" width="250"> <br> 액상형전자담배 관련 </li>
+		<li><img src="./img/jico.PNG" width="250"> <br> 코로나19 영상자료 </li>
 
 	</ul>
 </section>
