--- a/index.html
+++ b/index.html
@@ -166,30 +166,30 @@
 </section>
 <section>
 	<ul id="sub2">
-		<li><img src="./img/jiw.png"> <br> 국가별 질병정보 </li>
-		<li><img src="./img/jib.png"> <br> 홍보자료 </li>
-		<li><img src="./img/jih.png"> <br> 이달의 건강정보 </li>
-		<li><img src="./img/jig.png"> <br> 조직도직원검색 </li>
-		<li><img src="./img/jip.png"> <br> 법령.지침.서식 </li>
-		<li><img src="./img/jiha.png"> <br> 공고/공시 </li>
+		<li><img src="./img/jiw.PNG"> <br> 국가별 질병정보 </li>
+		<li><img src="./img/jib.PNG"> <br> 홍보자료 </li>
+		<li><img src="./img/jih.PNG"> <br> 이달의 건강정보 </li>
+		<li><img src="./img/jig.PNG"> <br> 조직도직원검색 </li>
+		<li><img src="./img/jip.PNG"> <br> 법령.지침.서식 </li>
+		<li><img src="./img/jiha.PNG"> <br> 공고/공시 </li>
 
 	</ul>
 </section>
 <section>
 	<ul id="sub3">
-		<li><img src="./img/jia.png"></li>
-		<li><img src="./img/jin.png"></li>
-		<li><img src="./img/jio.png"></li>
-		<li><img src="./img/jica.png"></li>
+		<li><img src="./img/jia.PNG"></li>
+		<li><img src="./img/jin.PNG"></li>
+		<li><img src="./img/jio.PNG"></li>
+		<li><img src="./img/jica.PNG"></li>
 	</ul>
 </section>
 <div class="clear"></div>
 <footer>
 	<div id="address">
-		<img src="./img/jiju.png" width="550" height="50">
+		<img src="./img/jiju.PNG" width="550" height="50">
 	</div>
 	<div id="customer">
-		<img src="./img/jilo.png" width="300" height="50">
+		<img src="./img/jilo.PNG" width="300" height="50">
 	</div>
 </footer>
 
