--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </nav>
 <div class="clear"></div>
 <section>
-		<a href="formss.html" target="_blank"><img src="./img/jimain.PNG" width="1080"></a>
+		<a href="formss.PNG" target="_blank"><img src="./img/jimain.PNG" width="1080"></a>
 </section>
 <aside>
 		<ul>
