--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </nav>
 <div class="clear"></div>
 <section>
-		<a href="./img/formss.html" target="_blank"><img src="./img/jimain.PNG" width="1080"></a>
+		><img src="./img/jimain.PNG" width="1080">
 </section>
 <aside>
 		<ul>
@@ -164,6 +164,11 @@
 
 	</ul>
 </section>
+	<aside>
+		<ul>
+			<a href="./img/formss.html" target="_blank"><li> 정보 입력 </li></
+		</ul>
+</aside>
 <section>
 	<ul id="sub2">
 		<li><img src="./img/jiw.PNG"> <br> 국가별 질병정보 </li>
