--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 </section>
 	<aside>
 		<ul>
+			<li> 개인정보 신상 입력</li>
 			<a href="./img/formss.html" target="_blank"><li> 정보 입력 </li></
 		</ul>
 </aside>
