--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </nav>
 <div class="clear"></div>
 <section>
-		><img src="./img/jimain.PNG" width="1080">
+		<img src="./img/jimain.PNG" width="1080">
 </section>
 <aside>
 		<ul>
@@ -167,7 +167,7 @@
 	<aside>
 		<ul>
 			<li> 개인정보 신상 입력</li>
-			<a href="./img/formss.html" target="_blank"><li> 정보 입력 </li></
+			<li><a href="./img/formss.html" target="_blank"> 정보 입력 </a></li>
 		</ul>
 </aside>
 <section>
