--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		<li> 연구개발 </li>
 		<li> 알림.자료 </li>
 		<li> 간행물.통계 </li>
-		<li> <a href="index1.html" target="_blank"> 민원.정보공개 </ </li>
+		<li> <a href="./img/index1.html" target="_blank"> 민원.정보공개 </a></li>
 		<li> 기관소개 </li>
 		<li> 사업별홈페이지 </li>
 
