--- a/img/index1.html
+++ b/img/index1.html
@@ -97,10 +97,10 @@
 <body id="page">
 <header>
 	<div id="logo">
-		<a href="index.html"><img src=".jilogo.PNG" width="200" height="70"></a>
+		<a href="index.html"><img src="./jilogo.PNG" width="200" height="70"></a>
 	</div>
 	<div id="top">
-		<img src="./img/gun.png" width="800" height="70">
+		<img src="./gun.PNG" width="800" height="70">
 	</div>
 </header>
 <div class="clear"></div>
@@ -122,7 +122,7 @@
 <section>
 	<h1> 1339콜센터</h1>
 	<hr>
-		<h2><img src="./img/mm.png" width="25"> 소개 </h2>
+		<h2><img src="./mm.PNG" width="25"> 소개 </h2>
 			
 		<ul>
 			<ol> 질병정보 궁금할 때, 감염병이 의심될 때 질병관리본부 콜센터  ☎1339로 문의하세요! </ol>
@@ -131,7 +131,7 @@
 </section>
 <div class="clear"></div>
 <section>
-		<img src="./img/call.jpg">
+		<img src="./call.JPG">
 </section>
 <aside>
 	<h1> 민원 . 정보공개 </h1>
@@ -150,7 +150,7 @@
 </aside>
 
 <section>
-	<h2><img src="./img/mm.png" width="25"> 이용 안내 </h2>
+	<h2><img src="./mm.PNG" width="25"> 이용 안내 </h2>
 	<ul>
 		<li> 대표번호 : 국번없이 1339(무료)</li>
 		<li> 운영시간 : 365일 24시간</li>
@@ -187,10 +187,10 @@
 <div class="clear"></div>
 <footer>
 	<div id="address">
-		<img src="./img/jiju.png" width="550" height="50">
+		<img src="./jiju.png" width="550" height="50">
 	</div>
 	<div id="customer">
-		<img src="./img/jilo.png" width="300" height="50">
+		<img src="./jilo.png" width="300" height="50">
 	</div>
 </footer>
 
