--- a/img/index1.html
+++ b/img/index1.html
@@ -131,7 +131,7 @@
 </section>
 <div class="clear"></div>
 <section>
-		<img src="./call.JPG">
+		<img src="./call.jpg">
 </section>
 <aside>
 	<h1> 민원 . 정보공개 </h1>
@@ -187,10 +187,10 @@
 <div class="clear"></div>
 <footer>
 	<div id="address">
-		<img src="./jiju.png" width="550" height="50">
+		<img src="./jiju.PNG" width="550" height="50">
 	</div>
 	<div id="customer">
-		<img src="./jilo.png" width="300" height="50">
+		<img src="./jilo.PNG" width="300" height="50">
 	</div>
 </footer>
 
