--- a/img/index1.html
+++ b/img/index1.html
@@ -97,7 +97,7 @@
 <body id="page">
 <header>
 	<div id="logo">
-		<a href="index.html"><img src="./jilogo.PNG" width="200" height="70"></a>
+		<a href="/index.html"><img src="./jilogo.PNG" width="200" height="70"></a>
 	</div>
 	<div id="top">
 		<img src="./gun.PNG" width="800" height="70">
