--- a/img/index1.html
+++ b/img/index1.html
@@ -36,14 +36,19 @@
 	}
 	section{
 		float: right;
+		margin-right: 250px;
 		margin-top: 10px;
 		border: solid 0px #bbbbbb;
 		padding-bottom: 20px;
+	}
+	section li{
+		margin-top: 10px;
 	}
 	aside{
 		float: left;
 		border: solid 0px #bbbbbb;
 		margin-top: 10px;
+		margin-left: 100px;
 	}
 	aside li{
 		text-align: right;
@@ -118,15 +123,15 @@
 
 	</ul>
 </nav>
-
+<div class="clear"></div>
 <section>
 	<h1> 1339콜센터</h1>
 	<hr>
 		<h2><img src="./mm.PNG" width="25"> 소개 </h2>
 			
 		<ul>
-			<ol> 질병정보 궁금할 때, 감염병이 의심될 때 질병관리본부 콜센터  ☎1339로 문의하세요! </ol>
-			<ol> 언제 어디서나 1339로 전화하시면, 질병관련 정보와 상담서비스를 신속하고 정확하게 제공해드립니다. </ol>
+			<li> ㆍ 질병정보 궁금할 때, 감염병이 의심될 때 질병관리본부 콜센터  ☎1339로 문의하세요! </li>
+			<li> ㆍ 언제 어디서나 1339로 전화하시면, 질병관련 정보와 상담서비스를 신속하고 정확하게 제공해드립니다. </li>
 		</ul>
 </section>
 <div class="clear"></div>
@@ -152,12 +157,10 @@
 <section>
 	<h2><img src="./mm.PNG" width="25"> 이용 안내 </h2>
 	<ul>
-		<li> 대표번호 : 국번없이 1339(무료)</li>
-		<li> 운영시간 : 365일 24시간</li>
-		<li> 외국인 상담 : 상담을 원하는 국내 체류 외국인은 한국관광공사 관광안내센터(☎1330)와 법무부 <br>외국인종합안내센터(☎1345)와의 3자통화를 통해 상담을 받으실 수 있습니다. </li>
+		<li>ㆍ 대표번호 : 국번없이 1339(무료)</li>
+		<li>ㆍ 운영시간 : 365일 24시간</li>
+		<li>ㆍ 외국인 상담 : 상담을 원하는 국내 체류 외국인은 한국관광공사 관광안내센터(☎1330)와 법무부 <br>외국인종합안내센터(☎1345)와의 3자통화를 통해 상담을 받으실 수 있습니다. </li>
 	</ul>
-</section>
-<section>
 	<table border="1">
 			<th> 이용시간</th> <th> 언어 </th>
 		</tr>
@@ -183,6 +186,12 @@
 아랍어, 싱할라어</td>
 		</tr>
 	</table>
+		* 주요상담기능 : 외국인 행정 및 생활종합안내(출입국, 초청, 비자, 체류, 귀화, 난민, 이민 등)
+
+	<ul>
+		<li>ㆍ해외 이용 안내: 해외→국내에서 이용시, +82-2-2633-1339, +82-2-2163-5945번으로 이용가능(유료)</li>
+		<li>ㆍ콜백서비스 : 상담원이 모두 통화 중일 경우, 상담 가능한 번호를 남기시면 상담원이 연락드리겠습니다. </li>
+	</ul>
 </section>
 <div class="clear"></div>
 <footer>
