--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 		<li> 정책정보 </li>
 		<li> 연구개발 </li>
 		<li> 알림.자료 </li>
-		<li> 간행물.통계 </li>
-		<li> <a href="./img/index1.html" target="_blank"> 민원.정보공개 </a></li>
+		<li> 간행물ㆍ통계 </li>
+		<li> <a href="./img/index1.html" target="_blank"> 민원ㆍ정보공개 </a></li>
 		<li> 기관소개 </li>
 		<li> 사업별홈페이지 </li>
 
@@ -171,7 +171,7 @@
 		<li><img src="./img/jib.PNG"> <br> 홍보자료 </li>
 		<li><img src="./img/jih.PNG"> <br> 이달의 건강정보 </li>
 		<li><img src="./img/jig.PNG"> <br> 조직도직원검색 </li>
-		<li><img src="./img/jip.PNG"> <br> 법령.지침.서식 </li>
+		<li><img src="./img/jip.PNG"> <br> 법령ㆍ지침ㆍ서식 </li>
 		<li><img src="./img/jiha.PNG"> <br> 공고/공시 </li>
 
 	</ul>
