--- a/img/index1.html
+++ b/img/index1.html
@@ -97,6 +97,12 @@
 		padding-top: 10px;
 		padding-bottom: 10px;
 	}
+	h2{
+		margin-top: 20px;
+	}
+	hr{
+		margin-top: 10px;
+	}
 	</style>
 </head>
 <body id="page">
