--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	#sub3 li{
 		display: inline-block;
 		margin-right: 16px;
-		overflow: hidden; /*커지는 부분 숨기기??*/
+		overflow: hidden; /*커지는 부분 숨기기?*/
 	}
 	#sub3 img{
 		width: 250px;
@@ -122,10 +122,10 @@
 <body id="page">
 <header>
 	<div id="logo">
-		<img src="./img/jilogo.PNG" width="200" height="70">
+		<img src="./img/jilogo.png" width="200" height="70">
 	</div>
 	<div id="top">
-		로그인 | 회원가입 | <a href="./img/rhkwp.PNG" target="_blank">마이페이지</a> | 고객센터
+		로그인 | 회원가입 | <a href="./img/rhkwp.png" target="_blank">마이페이지</a> | 고객센터
 	</div>
 </header>
 <div class="clear"></div>
@@ -136,8 +136,8 @@
 		<li> 정책정보 </li>
 		<li> 연구개발 </li>
 		<li> 알림.자료 </li>
-		<li> 간행물ㆍ통계 </li>
-		<li> <a href="./img/index1.html" target="_blank"> 민원ㆍ정보공개 </a></li>
+		<li> 간행물.통계 </li>
+		<li> <a href="index1.html" target="_blank"> 민원.정보공개</a> </li>
 		<li> 기관소개 </li>
 		<li> 사업별홈페이지 </li>
 
@@ -145,7 +145,7 @@
 </nav>
 <div class="clear"></div>
 <section>
-		<img src="./img/jimain.PNG" width="1080">
+		<img src="./img/jimain.png" width="1080">
 </section>
 <aside>
 		<ul>
@@ -157,40 +157,41 @@
 </aside>
 <section>
 	<ul id="sub1">
-		<li><img src="./img/jimi.PNG" width="250"><br> 미세먼지 건강수치 </li>
-		<li><img src="./img/jibub.PNG" width="250"> <br> 법정감염병분류체계개편 </li>
-		<li><img src="./img/jipe.PNG" width="250"> <br> 액상형전자담배 관련 </li>
-		<li><img src="./img/jico.PNG" width="250"> <br> 코로나19 영상자료 </li>
+		<li><img src="./img/jimi.png" width="250"><br> 미세먼지 건강수치 </li>
+		<li><img src="./img/jibub.png" width="250"> <br> 법정감염병분류체계개편 </li>
+		<li><img src="./img/jipe.png" width="250"> <br> 액상형전자담배 관련 </li>
+		<li><img src="./img/jico.png" width="250"> <br> 코로나19 영상자료 </li>
 
 	</ul>
 </section>
 
+
 <section>
 	<ul id="sub2">
-		<li><img src="./img/jiw.PNG"> <br> 국가별 질병정보 </li>
-		<li><img src="./img/jib.PNG"> <br> 홍보자료 </li>
-		<li><img src="./img/jih.PNG"> <br> 이달의 건강정보 </li>
-		<li><img src="./img/jig.PNG"> <br> 조직도직원검색 </li>
-		<li><img src="./img/jip.PNG"> <br> 법령ㆍ지침ㆍ서식 </li>
-		<li><img src="./img/jiha.PNG"> <br> 공고/공시 </li>
+		<li><img src="./img/jiw.png"> <br> 국가별 질병정보 </li>
+		<li><img src="./img/jib.png"> <br> 홍보자료 </li>
+		<li><img src="./img/jih.png"> <br> 이달의 건강정보 </li>
+		<li><img src="./img/jig.png"> <br> 조직도직원검색 </li>
+		<li><img src="./img/jip.png"> <br> 법령.지침.서식 </li>
+		<li><img src="./img/jiha.png"> <br> 공고/공시 </li>
 
 	</ul>
 </section>
 <section>
 	<ul id="sub3">
-		<li><img src="./img/jia.PNG"></li>
-		<li><img src="./img/jin.PNG"></li>
-		<li><img src="./img/jio.PNG"></li>
-		<li><img src="./img/jica.PNG"></li>
+		<li><img src="./img/jia.png"></li>
+		<li><img src="./img/jin.png"></li>
+		<li><img src="./img/jio.png"></li>
+		<li><img src="./img/jica.png"></li>
 	</ul>
 </section>
 <div class="clear"></div>
 <footer>
 	<div id="address">
-		<img src="./img/jiju.PNG" width="550" height="50">
+		<img src="./img/jiju.png" width="550" height="50">
 	</div>
 	<div id="customer">
-		<img src="./img/jilo.PNG" width="300" height="50">
+		<img src="./img/jilo.png" width="300" height="50">
 	</div>
 </footer>
 
