--- a/img/index1.html
+++ b/img/index1.html
@@ -36,8 +36,8 @@
 	}
 	section{
 		float: right;
-		margin-right: 250px;
 		margin-top: 10px;
+		margin-right: 250px;
 		border: solid 0px #bbbbbb;
 		padding-bottom: 20px;
 	}
@@ -51,8 +51,10 @@
 		margin-left: 100px;
 	}
 	aside li{
+		font-size: 15px;
 		text-align: right;
-		margin-bottom: 30px;
+		margin-bottom: 5px;
+		padding: 5px 5px 5px 5px;
 	}
 	footer{
 		width: 1300px;
@@ -77,11 +79,13 @@
 		margin: 30px 20px 0 0; /*위 오 아 왼*/
 	}
 	#cho{
-		margin-top: 30px;
+		margin-top: 10px;
 		font-size: 15px;
 	}
 	#cho li:hover{
-		background: skyblue;
+		color: white;
+		font-weight: bold;
+		background: #21a089;
 	}
 	table{
 		border-collapse: collapse;
@@ -108,10 +112,10 @@
 <body id="page">
 <header>
 	<div id="logo">
-		<a href="/index.html"><img src="./jilogo.PNG" width="200" height="70"></a>
+		<a href="index.html"><img src="./img/jilogo.png" width="200" height="70"></a>
 	</div>
 	<div id="top">
-		<img src="./gun.PNG" width="800" height="70">
+		<img src="./img/gun.png" width="800" height="70">
 	</div>
 </header>
 <div class="clear"></div>
@@ -129,21 +133,7 @@
 
 	</ul>
 </nav>
-<div class="clear"></div>
-<section>
-	<h1> 1339콜센터</h1>
-	<hr>
-		<h2><img src="./mm.PNG" width="25"> 소개 </h2>
-			
-		<ul>
-			<li> ㆍ 질병정보 궁금할 때, 감염병이 의심될 때 질병관리본부 콜센터  ☎1339로 문의하세요! </li>
-			<li> ㆍ 언제 어디서나 1339로 전화하시면, 질병관련 정보와 상담서비스를 신속하고 정확하게 제공해드립니다. </li>
-		</ul>
-</section>
-<div class="clear"></div>
-<section>
-		<img src="./call.jpg">
-</section>
+
 <aside>
 	<h1> 민원 . 정보공개 </h1>
 	<hr>
@@ -156,16 +146,30 @@
 			<li> 정보공개청구 </li>
 			<li> 공공데이터</li>
 			<li> 기관장업무추진비</li>
-
 		</ul>
 </aside>
 
 <section>
-	<h2><img src="./mm.PNG" width="25"> 이용 안내 </h2>
+	<h1> 1339콜센터</h1>
+	<hr>
+		<h2><img src="./img/mm.png" width="25"> 소개 </h2>
+			
+		<ul>
+			<li> ㆍ 질병정보 궁금할 때, 감염병이 의심될 때 질병관리본부 콜센터  ☎1339로 문의하세요! </li>
+			<li> ㆍ 언제 어디서나 1339로 전화하시면, 질병관련 정보와 상담서비스를 신속하고 정확하게 제공해드립니다. </li>
+		</ul>
+</section>
+
+<section>
+		<img src="./img/call.jpg">
+</section>
+
+<section>
+	<h2><img src="./img/mm.png" width="25"> 이용 안내 </h2>
 	<ul>
-		<li>ㆍ 대표번호 : 국번없이 1339(무료)</li>
-		<li>ㆍ 운영시간 : 365일 24시간</li>
-		<li>ㆍ 외국인 상담 : 상담을 원하는 국내 체류 외국인은 한국관광공사 관광안내센터(☎1330)와 법무부 <br>외국인종합안내센터(☎1345)와의 3자통화를 통해 상담을 받으실 수 있습니다. </li>
+		<li> ㆍ 대표번호 : 국번없이 1339(무료)</li>
+		<li> ㆍ 운영시간 : 365일 24시간</li>
+		<li> ㆍ 외국인 상담 : 상담을 원하는 국내 체류 외국인은 한국관광공사 관광안내센터(☎1330)와 법무부 <br>외국인종합안내센터(☎1345)와의 3자통화를 통해 상담을 받으실 수 있습니다. </li>
 	</ul>
 	<table border="1">
 			<th> 이용시간</th> <th> 언어 </th>
@@ -192,20 +196,21 @@
 아랍어, 싱할라어</td>
 		</tr>
 	</table>
-		* 주요상담기능 : 외국인 행정 및 생활종합안내(출입국, 초청, 비자, 체류, 귀화, 난민, 이민 등)
+	* 주요상담기능 : 외국인 행정 및 생활종합안내(출입국, 초청, 비자, 체류, 귀화, 난민, 이민 등)
 
 	<ul>
 		<li>ㆍ해외 이용 안내: 해외→국내에서 이용시, +82-2-2633-1339, +82-2-2163-5945번으로 이용가능(유료)</li>
 		<li>ㆍ콜백서비스 : 상담원이 모두 통화 중일 경우, 상담 가능한 번호를 남기시면 상담원이 연락드리겠습니다. </li>
 	</ul>
 </section>
+
 <div class="clear"></div>
 <footer>
 	<div id="address">
-		<img src="./jiju.PNG" width="550" height="50">
+		<img src="./img/jiju.png" width="550" height="50">
 	</div>
 	<div id="customer">
-		<img src="./jilo.PNG" width="300" height="50">
+		<img src="./img/jilo.png" width="300" height="50">
 	</div>
 </footer>
 
