--- a/img/index1.html
+++ b/img/index1.html
@@ -112,10 +112,10 @@
 <body id="page">
 <header>
 	<div id="logo">
-		<a href="index.html"><img src="./img/jilogo.png" width="200" height="70"></a>
+		<a href="/index.html"><img src="./img/jilogo.PNG" width="200" height="70"></a>
 	</div>
 	<div id="top">
-		<img src="./img/gun.png" width="800" height="70">
+		<img src="./img/gun.PNG" width="800" height="70">
 	</div>
 </header>
 <div class="clear"></div>
@@ -152,7 +152,7 @@
 <section>
 	<h1> 1339콜센터</h1>
 	<hr>
-		<h2><img src="./img/mm.png" width="25"> 소개 </h2>
+		<h2><img src="./img/mm.PNG" width="25"> 소개 </h2>
 			
 		<ul>
 			<li> ㆍ 질병정보 궁금할 때, 감염병이 의심될 때 질병관리본부 콜센터  ☎1339로 문의하세요! </li>
@@ -165,7 +165,7 @@
 </section>
 
 <section>
-	<h2><img src="./img/mm.png" width="25"> 이용 안내 </h2>
+	<h2><img src="./img/mm.PNG" width="25"> 이용 안내 </h2>
 	<ul>
 		<li> ㆍ 대표번호 : 국번없이 1339(무료)</li>
 		<li> ㆍ 운영시간 : 365일 24시간</li>
