--- a/img/index1.html
+++ b/img/index1.html
@@ -207,10 +207,10 @@
 <div class="clear"></div>
 <footer>
 	<div id="address">
-		<img src="./img/jiju.png" width="550" height="50">
+		<img src="./img/jiju.PNG" width="550" height="50">
 	</div>
 	<div id="customer">
-		<img src="./img/jilo.png" width="300" height="50">
+		<img src="./img/jilo.PNG" width="300" height="50">
 	</div>
 </footer>
 
