--- a/img/index1.html
+++ b/img/index1.html
@@ -112,7 +112,7 @@
 <body id="page">
 <header>
 	<div id="logo">
-		<a href="/index.html"><img src="img/jilogo.PNG" width="200" height="70"></a>
+		<a href="/index.html"><img src="/jilogo.PNG" width="200" height="70"></a>
 	</div>
 	<div id="top">
 		<img src="img/gun.PNG" width="800" height="70">
