--- a/img/index1.html
+++ b/img/index1.html
@@ -112,10 +112,10 @@
 <body id="page">
 <header>
 	<div id="logo">
-		<a href="/index.html"><img src="./jilogo.PNG" width="200" height="70"></a>
+		<a href="/index.html"><img src="jilogo.PNG" width="200" height="70"></a>
 	</div>
 	<div id="top">
-		<img src="/gun.PNG" width="800" height="70">
+		<img src="gun.PNG" width="800" height="70">
 	</div>
 </header>
 <div class="clear"></div>
@@ -152,7 +152,7 @@
 <section>
 	<h1> 1339콜센터</h1>
 	<hr>
-		<h2><img src="img/mm.PNG" width="25"> 소개 </h2>
+		<h2><img src="mm.PNG" width="25"> 소개 </h2>
 			
 		<ul>
 			<li> ㆍ 질병정보 궁금할 때, 감염병이 의심될 때 질병관리본부 콜센터  ☎1339로 문의하세요! </li>
@@ -161,11 +161,11 @@
 </section>
 
 <section>
-		<img src="/call.jpg">
+		<img src="call.jpg">
 </section>
 
 <section>
-	<h2><img src="img/mm.PNG" width="25"> 이용 안내 </h2>
+	<h2><img src="mm.PNG" width="25"> 이용 안내 </h2>
 	<ul>
 		<li> ㆍ 대표번호 : 국번없이 1339(무료)</li>
 		<li> ㆍ 운영시간 : 365일 24시간</li>
@@ -207,10 +207,10 @@
 <div class="clear"></div>
 <footer>
 	<div id="address">
-		<img src="img/jiju.PNG" width="550" height="50">
+		<img src="jiju.PNG" width="550" height="50">
 	</div>
 	<div id="customer">
-		<img src="img/jilo.PNG" width="300" height="50">
+		<img src="jilo.PNG" width="300" height="50">
 	</div>
 </footer>
 
