--- a/img/index1.html
+++ b/img/index1.html
@@ -125,9 +125,9 @@
 		<li> 건강정책 </li>
 		<li> 정책정보 </li>
 		<li> 연구개발 </li>
-		<li> 알림.자료 </li>
-		<li> 간행물.통계 </li>
-		<li> 민원.정보공개 </li>
+		<li> 알림ㆍ자료 </li>
+		<li> 간행물ㆍ통계 </li>
+		<li> 민원ㆍ정보공개 </li>
 		<li> 기관소개 </li>
 		<li> 사업별홈페이지 </li>
 
@@ -135,7 +135,7 @@
 </nav>
 
 <aside>
-	<h1> 민원 . 정보공개 </h1>
+	<h1> 민원 ㆍ 정보공개 </h1>
 	<hr>
 		<ul id="cho">
 			<li> 1339콜센터</li>
